--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'China'
 - !lcc 'DS'
 - !lcsh 'China -- History'
+- GITenberg
 title: The Awakening of China
 url: http://www.gutenberg.org/ebooks/15125
